objects/Vehicle_Not_In_Vista_Market_Codes__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Vehicle Not In Vista Market Codes</label>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Code__c</fullName>
        <label>Market Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <label>Currency Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
</CustomObject>